--- a/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
@@ -13,8 +13,8 @@
                             <i class="fa fa-download" aria-hidden="true" title="Export"></i>
                             <!--<button type="button" class="btn btn-success" (click)="downloadExcel()">Download Mandate Excel File</button>-->
                             <!--<label (click)="download()">
-                                Download Mandate Excel File
-                            </label>-->
+                            Download Mandate Excel File
+                        </label>-->
                         </li>
                         <li>
                             <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
@@ -23,11 +23,11 @@
                             </label>
                         </li>
                         <!--<li>
-                            <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
-                            <label data-toggle="modal" data-target="#myModal" (click)="show()">
-                                Reject Mandate
-                            </label>
-                        </li>-->
+                        <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
+                        <label data-toggle="modal" data-target="#myModal" (click)="show()">
+                            Reject Mandate
+                        </label>
+                    </li>-->
                         <li>
                             <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
                             <label>
@@ -117,7 +117,8 @@
                         Reject Mandate
                     </label>
 
-                    <button type="button" class="btn btn-success" (click)="downloadScannedMandate()">Download Scanned mandate</button>
+                    <button type="button" class="btn btn-success" (click)="downloadScannedMandate()">Download Scanned mandate</button> &nbsp; &nbsp;
+                    <label [style.display]="MandateMessage ? 'block' : 'none'" [ngStyle]="{'color':'red'}">Please Select Mandate</label>
                     <!--<button type="button" class="btn btn-success" (click)="checkedDemo()"> Excel File DEmo</button>-->
 
                 </div>
@@ -126,6 +127,11 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" *ngIf="Preloader">
+            <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
+        </div>
+
 
 
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
@@ -171,8 +177,8 @@
                         <td colspan="3">No Record Found!</td>
                     </tr>
                     <!--<tr *ngIf="tabledata?.length != 0">
-                        <td [ngClass]="['loadernone']"></td>
-                    </tr>-->
+                    <td [ngClass]="['loadernone']"></td>
+                </tr>-->
 
                 </tbody>
 
@@ -216,7 +222,29 @@
 </div>
 
 <div class="container">
-    <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder2" *ngIf="loading" >      <!--*ngIf="loading"-->       <!--  ngHide="loading"  -->    <!--style="display: none;"-->
-        <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
+    <!--<div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder2" *ngIf="loading" >      <!--*ngIf="loading"-->       <!--  ngHide="loading"  -->    <!--style="display: none;"-->
+        <!--<img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
+    </div>-->
+</div>
+
+<div class="modal" id="myModal" [style.display]="SuccessModal ? 'block' : 'none'">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">
+                    <img src="../../ClientApp/assets/images/saveSuccessImg.png" />
+                </h4>
+                <button type="button" class="close" data-dismiss="modal" (click)="hidemandate()">&times;</button>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+                <p>Saved Successfully</p>
+            </div>
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-dismiss="modal" (click)="hidemandate()">Close</button>
+            </div>
+        </div>
     </div>
 </div>
