--- a/QuickZip/ClientApp/app/master/nachtransactionpresentation/nachtransactionpresentation.component.html
+++ b/QuickZip/ClientApp/app/master/nachtransactionpresentation/nachtransactionpresentation.component.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="display:none;">
             <table id="tblnachmandate">
                 <thead>
                     <tr>
@@ -102,7 +102,186 @@
             </table>
 
         </div>
+        <form style="display:block;">
+            <div class="col-md-12 col-sm-12 col-xs-12 boxsetting">
+                <div class="col-md-12 col-sm-12 col-xs-12 boxhead">
+                    <div class="row no-padding">
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                            <div class="form-group">
+                                <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
+                                    Bank:
+                                </label>
+                                <div class="col-sm-6 col-md-7 col-xs-7 displayinlineblock">
+                                    <select id="" class="alldropdown" (change)="BindGridForm(25,86,10)">
+                                        <option value="0">Select</option>
+                                        <option *ngFor="let lang of bankbind"
+                                                value={{lang.SponsorBankCodeId}}>
+                                            {{lang.SponsorBankCodeName}}
+
+</select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                            <div class="form-group">
+                                <label class="col-sm-5 col-md-4 col-xs-4 control-label no-padding" for="form-field-1"> Presentment Date: </label>
+                                <div class="col-sm-7 col-md-7 col-xs-7 displayinlineblock">
+                                    <input class="col-sm-12 col-md-12 col-xs-12" style="height: 22px;" type="date">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-12  no-padding ">
+
+                        </div>
+                    </div>
+                    <div class="row no-padding" *ngFor="let lang of bindgrid" >
+                        <div class="col-md-4 col-sm-4 col-xs-12" >
+                            <div class="form-group">
+                                <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
+                                    Bank Account Number:
+                                </label>
+                                <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                                    <label class="col-sm-12 col-md-12 col-xs-12">{{lang.AccountNumber}}</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                            <div class="form-group">
+                                <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
+                                    Sponsor Bank code:
+                                </label>
+                                <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                                    <label class="col-sm-12 col-md-12 col-xs-12">{{lang.SponsorBankcode}}</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                            <div class="form-group">
+                                <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
+                                    Utility Code:
+                                </label>
+                                <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                                    <label class="col-sm-12 col-md-12 col-xs-12">{{lang.UtilityCode}}</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row no-padding" *ngFor="let lang of bindgrid">
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                            <div class="form-group">
+                                <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
+                                    Created By:
+                                </label>
+                                <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                                    <label class="col-sm-12 col-md-12 col-xs-12">{{lang.UserName}}</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                            <div class="form-group">
+                                <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
+                                    IFSC:
+                                </label>
+                                <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                                    <label class="col-sm-12 col-md-12 col-xs-12">{{lang.IFSC}}</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <div class="clearfix">
+
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="display:block;margin-top: 10%;">
+
+            <div class="col-md-12 col-sm-12 no-padding">
+                <div class="row no-padding" style="height: 23px;">
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class="form-group">
+                            <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
+                                Uploaded Records:
+                            </label>
+                            <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
+                                <label class="col-sm-12 col-md-12 col-xs-12">1</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <ul class="toolbar-content" style="float: right;">
+                            <li>
+                                <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
+                                <label>
+                                    New
+                                </label>
+                            </li>
+                            <li>
+                                <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
+                                <label>
+                                    Edit
+                                </label>
+                            </li>
+                            <li>
+                                <i class="fa fa-floppy-o" aria-hidden="true" title="Cancel"></i>
+                                <label>
+                                    Cancel
+                                </label>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <table id="tblsecondgrd">
+                <thead>
+                    <tr>
+                        <th style="width:90px;"><input name="all" type="checkbox">All</th>
+                        <th style="width:150px;">UMRN</th>
+                        <th style="width:150px;">Reference No</th>
+                        <th style="width:150px;">Amount</th>
+                        <th style="width:150px;"> Status</th>
+                        <th style="width:150px;">Reason</th>
+                        <th style="width:150px;">Client Code</th>
+                        <th style="width:150px;">Corporate Ac/No</th>
+
+
+
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="width:90px;"><input name="all" type="checkbox"></td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">Demo</td>
+
+
+
+                    </tr>
+
+                </tbody>
+
+            </table>
+
+        </div>
+
 
     </div>
+
 </div>
+
+
+
 
